[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
async-std = "1.8"
rand = "0.8"
